Multi-line text box and theme
Added multinine textbox
Refactored property notification
Started work on themes
Removed toolbar class and opted for menu

--- a/TextEditor/TextEditor/TextEditor.csproj
+++ b/TextEditor/TextEditor/TextEditor.csproj
@@ -59,9 +59,6 @@
     <Compile Include="ANotifyBase.cs" />
     <Compile Include="Document\ViewModel\Document.cs" />
     <Compile Include="UIController.cs" />
-    <Compile Include="UIControls\Toolbar\Toolbar.xaml.cs">
-      <DependentUpon>Toolbar.xaml</DependentUpon>
-    </Compile>
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -75,10 +72,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="UIControls\Toolbar\Toolbar.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -116,6 +109,9 @@
       <Project>{51becfb1-9e38-4629-af23-11d68d544a3f}</Project>
       <Name>TextEditor.Theme</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UIControls\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
